resolve legend overflow

--- a/src/frontend/todo/taskview/TaskLineChart.scss
+++ b/src/frontend/todo/taskview/TaskLineChart.scss
@@ -1,3 +1,13 @@
 .modal-content.time-preference-score{
 	padding: 0px 20px 40px 20px;
 }
+
+.time-preference-score{
+	.rd3-legend-container{
+		overflow: auto;
+		max-height: 500px;
+	}
+	
+	.rd3-legend{
+	}
+}
